# video2text

./: Makefile  app.py  download_subtitles.py  pyproject.toml
